# rust_image_energy

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/energy_of_image/: energy.rs  image_wrapper.rs  mod.rs  pixel.rs
