[package]
name = "image_energy"
version = "0.1.2"
edition = "2021"
authors = ["Jasper Sarrazin"]
description = "Library crate for calculating energy of an image"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"